<resources>
    <string name="app_name">PetCare</string>
    <string name="login">Login</string>
    <string name="create_account">Create Account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_out">Sign Out</string>
    <string name="name">Name</string>
    <string name="cats_are_adorable">Cats are Adorable!!</string>
</resources>